--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "libx.fuser",
-  "version": "0.0.8",
+  "version": "0.0.9",
   "description": "",
   "main": "index.js",
   "directories": {
@@ -19,7 +19,10 @@
     "url": "https://github.com/Livshitz/libx.fuser/issues"
   },
   "homepage": "https://github.com/Livshitz/libx.fuser#readme",
-  "files": [ "dist/**", "src/**" ],
+  "files": [
+    "dist/**",
+    "src/**"
+  ],
   "dependencies": {
     "algoliasearch": "^3.32.0",
     "angular": "^1.7.6",
@@ -32,6 +35,6 @@
     "angular-sanitize": "^1.7.6",
     "firebase": "^5.8.0",
     "jquery": "^3.3.1",
-    "libx.js": "^0.0.18"
+    "libx.js": "^0.0.21"
   }
 }
