--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -39,8 +39,8 @@ jobs:
           command: |
             git config user.email "eli.livshitz@gmail.com"
             git config user.name "Eli Livshitz"
-            npm version patch
-            git add *;
+            npm version patch -f
+            git add *
             git commit -m "^ pkg bump"
             git push
       - run:
