--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -39,7 +39,7 @@ jobs:
           command: |
             git config user.email "eli.livshitz@gmail.com"
             git config user.name "Eli Livshitz"
-            git add . && git commit
+            git add . && git commit -m "(CI) leftovers [skip ci]"
             npm version patch -m "^ pkg bump (%s) [skip ci]"
             # git add *
             # git commit -m "^ pkg bump"
