--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -11,25 +11,37 @@ jobs:
     steps:
       - checkout
 
+      # ------------------------------------
+
       - restore_cache:
           keys:
-          - v1-dependencies-{{ checksum "package.json" }}
-      # fallback to using the latest cache if no exact match is found
-          - v1-dependencies-
+            - yarn-packages-{{ checksum "package-lock.json" }}
+            - v1-dependencies-{{ checksum "package.json" }}
+            - v1-dependencies-
 
       - run: npm install
-    #   - run:
-    #       name: Run tests
-    #       command: npm test
 
       - save_cache:
+          name: Save npm Package Cache
           paths:
             - node_modules
           key: v1-dependencies-{{ checksum "package.json" }}
+
+      # ------------------------------------
     
+      #   - run:
+      #       name: Run tests
+      #       command: npm test
+
       - run:
           name: Build
           command: node build-libs.js
+
+      - persist_to_workspace:
+          root: ~/repo
+          paths: .
+
+      # ------------------------------------
       
       - run:
           name: Authenticate with registry
