--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -46,13 +46,18 @@ jobs:
       - run:
           name: Authenticate with registry
           command: echo "//registry.npmjs.org/:_authToken=$npm_TOKEN" > ~/repo/.npmrc
+      - attach_workspace:
+          at: ~/repo
       - run:
           name: package bump
           command: |
+            git config --global push.default simple
             git config user.email "eli.livshitz@gmail.com"
             git config user.name "Eli Livshitz"
             git add . && git commit -m "(CI) leftovers [skip ci]"
             npm version patch -m "^ pkg bump (%s) [skip ci]"
+            git push origin master
+            git push --tags
             # git add *
             # git commit -m "^ pkg bump"
             # git push
