--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -15,12 +15,9 @@ jobs:
 
       - restore_cache:
           keys:
-            - yarn-packages-{{ checksum "package-lock.json" }}
             - v1-dependencies-{{ checksum "package.json" }}
             - v1-dependencies-
-
       - run: npm install
-
       - save_cache:
           name: Save npm Package Cache
           paths:
@@ -54,13 +51,10 @@ jobs:
             git config --global push.default simple
             git config user.email "eli.livshitz@gmail.com"
             git config user.name "Eli Livshitz"
-            git add . && git commit -m "(CI) leftovers [skip ci]"
+            # git add . && git commit -m "(CI) leftovers [skip ci]"
             npm version patch -m "^ pkg bump (%s) [skip ci]"
             git push origin master
             git push --tags
-            # git add *
-            # git commit -m "^ pkg bump"
-            # git push
       - run:
           name: Publish package
           command: npm publish
