--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -22,7 +22,9 @@ jobs:
           name: Save npm Package Cache
           paths:
             - node_modules
-          key: v1-dependencies-{{ checksum "package.json" }}
+          key: 
+            - v1-dependencies-{{ checksum "package.json" }}
+            - v1-dependencies-
 
       # ------------------------------------
     
