--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -22,7 +22,7 @@ jobs:
           name: Save npm Package Cache
           paths:
             - node_modules
-          key: 
+          keys: 
             - v1-dependencies-{{ checksum "package.json" }}
             - v1-dependencies-
 
