--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -13,18 +13,14 @@ jobs:
 
       # ------------------------------------ 
 
-      - restore_cache:
-          keys:
-            - v1-dependencies-{{ checksum "package.json" }}
-            - v1-dependencies-
+      - restore_cache: # special step to restore the dependency cache
+          # Read about caching dependencies: https://circleci.com/docs/2.0/caching/
+          key: dependency-cache-{{ checksum "package.json" }}
       - run: npm install
-      - save_cache:
-          name: Save npm Package Cache
+      - save_cache: # special step to save the dependency cache
+          key: dependency-cache-{{ checksum "package.json" }}
           paths:
-            - node_modules
-          keys: 
-            - v1-dependencies-{{ checksum "package.json" }}
-            - v1-dependencies-
+            - ./node_modules
 
       # ------------------------------------
     
