--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -49,6 +49,7 @@ jobs:
             git config --global push.default simple
             git config user.email "eli.livshitz@gmail.com"
             git config user.name "Eli Livshitz"
+            git add . 
             # git add . && git commit -m "(CI) leftovers [skip ci]"
             npm version patch -m "^ pkg bump (%s) [skip ci]"
             git push origin master
