--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -29,27 +29,27 @@ jobs:
       #       command: npm test
 
       - run:
-          name: Build
-          command: node build-libs.js
+        name: Build
+        command: node build-libs.js
 
-      - persist_to_workspace:
-          root: ~/repo
-          paths: .
+    #   - persist_to_workspace:
+    #       root: ~/repo
+    #       paths: .
 
       # ------------------------------------
       
       - run:
           name: Authenticate with registry
           command: echo "//registry.npmjs.org/:_authToken=$npm_TOKEN" > ~/repo/.npmrc
-      - attach_workspace:
-          at: ~/repo
+    #   - attach_workspace:
+    #       at: ~/repo
       - run:
           name: package bump
           command: |
             git config --global push.default simple
             git config user.email "eli.livshitz@gmail.com"
             git config user.name "Eli Livshitz"
-            node node_modules/libx.js/node/cli.js --bump=patch package.json
+            node node/cli.js --bump=patch package.json
             git add .
             git commit -m "^ pkg bump (%s) [skip ci]"
             git push origin master
