--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -49,7 +49,7 @@ jobs:
             git config --global push.default simple
             git config user.email "eli.livshitz@gmail.com"
             git config user.name "Eli Livshitz"
-            node node/cli.js --bump=patch package.json
+            node node_modules/libx.js/node/cli.js --bump=patch package.json
             git add .
             git commit -m "^ pkg bump (%s) [skip ci]"
             git push origin master
