--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "homepage": "https://github.com/Livshitz/bundularjs#readme",
     "files": [
         "dist/**",
+        "modules/**",
         "src/**",
         "*.js"
     ],
