--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -16,7 +16,7 @@ jobs:
       - restore_cache: # special step to restore the dependency cache
           # Read about caching dependencies: https://circleci.com/docs/2.0/caching/
           key: dependency-cache-{{ checksum "package.json" }}
-      - run: npm install
+      - run: yarn install
       - save_cache: # special step to save the dependency cache
           key: dependency-cache-{{ checksum "package.json" }}
           paths:
@@ -26,7 +26,7 @@ jobs:
     
       #   - run:
       #       name: Run tests
-      #       command: npm test
+      #       command: yarn test
 
       - run:
           name: Build
@@ -44,16 +44,11 @@ jobs:
     #   - attach_workspace:
     #       at: ~/repo
       - run:
-          name: package bump
+          name: Publish package
           command: |
             git config --global push.default simple
             git config user.email "eli.livshitz@gmail.com"
             git config user.name "Eli Livshitz"
-            node node_modules/libx.js/node/cli.js --bump=patch package.json
-            git add .
-            git commit -m "^ pkg bump (%s) [skip ci]"
-            git push origin master
-            git push --tags
-      - run:
-          name: Publish package
-          command: npm publish
+            yarn publish --patch
+            git commit --amend -m "^ pkg bump [skip ci]"
+            git push origin
