--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -5,6 +5,12 @@
 	"version": "0.2.0",
 	"configurations": [
 		{
+            "name": "Node.JS attach (local)",
+            "type": "node",
+            "request": "attach",
+            "port": 9229
+		},
+		{
 			"name": "Launch Program",
 			"type": "node",
 			"request": "launch",
