--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "bundularjs",
-    "version": "0.1.29",
+    "version": "0.2.1",
     "description": "",
     "main": "index.js",
     "directories": {
@@ -37,6 +37,7 @@
         "angular-sanitize": "^1.7.6",
         "firebase": "^5.9.2",
         "jquery": "^3.3.1",
-        "libx.js": "^0.1.51"
+        "libx.js": "^0.2.2",
+        "pax.libx.js": "^0.1.2"
     }
 }
