* makeEmpty: decrypt only if `open` not exists

--- a/package.json
+++ b/package.json
@@ -38,7 +38,9 @@
         "angular-sanitize": "^1.7.6",
         "firebase": "^5.9.2",
         "jquery": "^3.3.1",
-        "libx.js": "^0.3.12",
-        "pax.libx.js": "^0.1.9"
+        "libx.js": "^0.3.17"
+    },
+    "devDependencies": {
+        "pax.libx.js": "^0.1.11"
     }
 }
