--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
         "angular-sanitize": "^1.7.6",
         "animate.css": "^3.7.2",
         "firebase": "^6.6.2",
+        "flexboxgrid": "^6.3.1",
         "jquery": "^3.3.1",
         "libx.js": "^0.4.29",
         "sal.js": "^0.6.3"
